--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
-hola mundo
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <h1>me debes unas papas con sal :D</h1>
+    <title>Document</title>
+</head>
+<body>
+    
+</body>
+</html>
